# Excel-Anonymizer

./: .gitignore  Anonymize_Excel.py  LICENSE  README.md  excel_anonymizer.py  personal_information.xlsx  pyproject.toml
.well-known/: funding-manifest-urls
