[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "excel_anonymizer"
authors = [{name = "Siddharth Bhatia"}]
description = "Anonymizes an Excel file and synthesizes new data in its place"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
  "presidio_analyzer",
  "presidio_anonymizer",
  "pandas",
  "pyarrow",
  "faker",
  "openpyxl",
  "en_core_web_lg",
]

#dynamic = ["version"]
version = "1.1.7"

[project.scripts]
excel-anonymizer = "excel_anonymizer:main"
excel-anon = "excel_anonymizer:main"

[tool.setuptools]
py-modules = ["excel_anonymizer"]
include-package-data = false

[tool.setuptools_scm]